# design_pattern_example

./: README.md  project.toml  pyproject.toml  requirements.txt
design_pattern/: cli.py
design_pattern/identify/: __init__.py  borg_identifier.py  ilwrapper_identifier.py  ingestlist_identifier.py  ingestlist_identifier_async.py
design_pattern/identify/ilwrapper/: __init__.py  ilwrapper.py
design_pattern/identify/ingestlist/: __init__.py
design_pattern/identify/ingestlist/models/: __init__.py  config.py  (+3 more)
design_pattern/models/: __init__.py  abstract_builder.py  abstract_identifier.py  droid_csv_model.py  ilwrapper_data_model.py
design_pattern/models/callas_soap/: __init__.py  _utils.py  builders.py  envelope.py  payloads.py  readers.py
design_pattern/utils/: __init__.py  cast.py  remote_session.py  remote_session_async.py
design_pattern/xml/: __init__.py  xml_builder.py
design_pattern/xmlformats/: __init__.py  droid_csv_xml_builder.py  il_results.py
src/design_pattern/models/: __init__.py  droid_csv_model.py
src/design_pattern/services/: __init__.py
src/design_pattern/utils/: __init__.py  cast.py
src/design_pattern/xml/: __init__.py  xml_builder.py
tests/: __init__.py  test_borgidentifier.py  test_callassoapbuilder.py  test_callassoaprequest.py  test_droidcsvxmlbuilder.py  test_ilwrapperidentifier.py  test_ilwrapperidentifier_async.py  test_parse_il_response.py  test_readcsv.py  test_xmlbuilder.py
tests/data/: droid_results.csv  il_results.xml
tests/ilwrapper/: test_ilwrapper_identify.py  test_ilwrapper_login.py  test_ilwrapper_validate.py
